--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -4,5 +4,8 @@
     "Manicurist and nail designer": "Manicure e designer de unhas",
     "Other services": "Outros Serviços",
     "Sign in": "Entrar",
-    "Create account": "Criar Conta"
+    "Create account": "Criar Conta",
+    "Discover and book service with the best companies and service providers near you": "Descubra e reserve serviços com as melhores empresas e prestadores de serviços perto de você",
+    "Find companies or services": "Encontre empresas ou serviços",
+    "Popular services": "Serviços Populares"
 }
