--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -7,5 +7,6 @@
     "Create account": "Criar Conta",
     "Discover and book service with the best companies and service providers near you": "Descubra e reserve serviços com as melhores empresas e prestadores de serviços perto de você",
     "Find companies or services": "Encontre empresas ou serviços",
-    "Popular services": "Serviços Populares"
+    "Popular services": "Serviços Populares",
+    "Services": "Serviços"
 }
