--- a/resources/lang/pt_BR.json
+++ b/resources/lang/pt_BR.json
@@ -7,6 +7,8 @@
     "Create account": "Criar Conta",
     "Discover and book service with the best companies and service providers near you": "Descubra e reserve serviços com as melhores empresas e prestadores de serviços perto de você",
     "Find companies or services": "Encontre empresas ou serviços",
-    "Popular services": "Serviços Populares",
-    "Services": "Serviços"
+    "Popular services": "Serviços populares",
+    "Services": "Serviços",
+    "Companies or Service Providers": "Empresas ou prestadores de serviços",
+    "No address found": "Nenhuma endereço encontrado"
 }
